--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div class="container">
+        <audio autoplay>
+            <source src="images/Be A Servant, Be A Light.mp3" type="audio/mpeg">
+        </audio>
         <video id="webcamVideo" autoplay playsinline></video>
-        <canvas id="canvas"></canvas>
         <div id="overlay"></div>
     </div>
 </body>
