--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <audio autoplay>
-            <source src="images/Be A Servant, Be A Light.mp3" type="audio/mpeg">
+            <source src="audio/Be A Servant, Be A Light.mp3" type="audio/mp3">
         </audio>
         <video id="webcamVideo" autoplay playsinline></video>
         <div id="overlay"></div>
